Fix navbar width alignment

--- a/app/src/main/resources/io/xpipe/app/resources/style/browser.css
+++ b/app/src/main/resources/io/xpipe/app/resources/style/browser.css
@@ -175,7 +175,7 @@
 }
 
 .browser .breadcrumbs {
-    -fx-padding: 0px 10px 0px 10px;
+    -fx-padding: 0;
 }
 
 .browser .breadcrumbs {
